<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="css.cis3334.pizzaorder.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/small_pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonSmall"
            android:layout_weight="1"
            android:textSize="18sp" />

        <RadioButton
            android:text="@string/medium_pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMedium"
            android:layout_weight="1"
            tools:ignore="HardcodedText"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:text="@string/large_pizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonLarge"
            android:layout_weight="1"
            tools:ignore="HardcodedText"
            android:textSize="18sp"
            android:layout_marginTop="10dp" />

    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:drawSelectorOnTop="true"
        android:textSize="20sp"
        android:entries="@array/toppings"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:text="CheckBoxExtraCheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxCheese"
        android:layout_marginTop="12dp"
        tools:ignore="HardcodedText"
        android:textSize="18sp" />

    <Button
        android:text="Order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOrder"
        android:onClick="onClickOrder"
        tools:ignore="HardcodedText"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:text="@string/checkboxdelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxDeluvery"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/total_due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTotal"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/order_status_nothing_ordered_yet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewStatus"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />


</LinearLayout>
